--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="description" content="Planning a trip? Delta Flight Booking Center makes it easy to find and book your flights hassle-free">
 
 
-    <title>Book your flights with ease</title>
+    <title>Delta Flight Booking Center</title>
     <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
